<resources>
    <string name="app_name">HealthCare-Doctor</string>
    <string name="msg_error_no_internet">Lỗi rồi</string>
    <string name="text_internet_error">Đây là vấn đề do kết nối mạng</string>
    <string name="title_error">Lỗi</string>
    <string name="messenger_error_connect_network">Không có kết nối đến internet</string>
    <string name="empty">""</string>
    <string name="phone_number">Di động</string>
    <string name="password">Mật khẩu</string>
    <string name="confirm_password">Xác nhận mật khẩu</string>
    <string name="button_send">submit</string>
    <string name="button_register">Đăng ký</string>
    <string name="text_confirm_sms_register">Enter code</string>
    <string name="text_description_code_sms_resend">%1$s min left</string>
    <string name="text_show_password">Lưu thông tin đăng nhập</string>
    <string name="text_login_ua_1">Đăng nhập</string>
    <string name="button_sign_up">Bạn không có tài khoản? Đăng ký</string>
    <!--screen introduce -->
    <string name="title_splash_1">Discover doctor near you</string>
    <string name="title_splash_2">Make a schedule easily</string>
    <string name="title_splash_3">Enjoy treatment directly</string>
    <string name="text_description_splash_1">Find the best doctor you want by your location or neighborhood</string>
    <string name="text_description_splash_2">Choose the time you want to make an appointment with a doctor</string>
    <string name="text_description_splash_3">Find the best doctor you want by your location or neighborhood</string>
    <string name="text_sign_up">Đăng ký</string>
    <!--end endpoint-->
    <!--screen main activity -->
    <string name="title_tab_home">Home</string>
    <string name="title_tab_appointment">Appointment</string>
    <string name="title_tab_chat">Chat</string>
    <string name="title_tab_notification">Notification</string>
    <string name="title_tab_setting">Setting</string>
    <string name="text_top_option_header">Gần đây</string>
    <string name="text_top_categories_header">Categories</string>
    <string name="text_show_all_near_by">See all</string>

    <!--end endpoint-->
    <!--screen home fragment -->
    <string name="text_title_categories_dentist">Khoa răng hàm mặt</string>
    <string name="text_description_categories_dentist">Khám bệnh liên quan răng miệng</string>
    <string name="text_title_categories_cardiology">Cardiology</string>
    <string name="text_description_categories_cardiology">Cardiology sdfds</string>
    <string name="text_title_categories_physician">Physician</string>
    <string name="text_description_categories_physician">Physician sdfds</string>
    <string name="text_title_categories_pediatric">Pediatric</string>
    <string name="text_description_categories_pediatric">Pediatric sdfds</string>
    <string name="text_title_categories_dermatology">Dermatology</string>
    <string name="text_description_categories_dermatology">Dermatology Dermatology sdfds</string>
    <string name="text_title_categories_orthopedician">Orthopedician</string>
    <string name="text_description_categories_orthopedician">Orthopedician Orthopedician sdfds</string>
    <string name="text_title_categories_neurologists">Neurologists</string>
    <string name="text_description_categories_neurologists">Neurologists Neurologists sdfds</string>
    <string name="your_location">Your Location</string>
    <string name="text_map">Map</string>
    <string name="text_filter">Filter</string>
    <!--end endpoint-->

    <!--screen detail doctor activity -->
    <string name="text_title_button_book_appointment">Book Appointment</string>
    <!--end endpoint-->
    <!--key map-->
    <string name="google_maps_api_key">AIzaSyCSsh65nOvuZTHQYQtz7dmAj5CPXwXtlzE</string>
    <string name="address">Địa chỉ</string>
    <string name="remainder">Nhắc nhở</string>
    <string name="consultation_and_treatment">Consultation and treatment</string>
    <string name="text_setting_time_remainder">30 minutes before</string>
    <string name="select_item_time_example">10:AM</string>
    <string name="text_next_book_appointment">Next</string>
    <!--end endpoint-->
    <!--screen book appointment -->
    <string name="confirm_book_appointment">Confirm</string>
    <string name="reject_book_appointment">Reject</string>
    <string name="complete_book_appointment">Complete</string>
    <string name="title_review">Kiểm tra</string>
    <string name="date_example">2019:12:12</string>
    <string name="time_example">8:30</string>
    <string name="title_specialist_doctor">Specialist</string>
    <string name="content_specialist_doctor_example">Khoa Mat</string>
    <string name="title_service_doctor">Dịch vụ</string>
    <string name="title_fee">Fee</string>
    <string name="title_remainder">Nhắc nhở</string>
    <string name="fee_75_example">75$</string>
    <string name="text_appointment_confirmed">Confirmed</string>
    <string name="text_appointment_confirming">Confirming</string>
    <string name="text_appointment_cancelled">Cancelled</string>
    <string name="text_appointment_completed">Completed</string>
    <!--end endpoint-->
    <!--setting-->
    <string name="text_account">Account</string>
    <string name="text_general_setting">More optiion</string>
    <string name="text_setting_notification">Notification</string>
    <string name="text_setting_volume">Volume</string>
    <string name="button_logout">Logout</string>
    <string name="text_setting_faq">History</string>
    <string name="text_title_tab_survey">Disease survey</string>
    <string name="text_description_step_one">Personal information</string>
    <string name="text_example_date_month_year">1990/01/01</string>
    <string name="text_birthday">BirthDay</string>
    <string name="text_sex">Gender</string>
    <string name="text_male">Male</string>
    <string name="text_female">Female</string>
    <string name="text_unknown_gender">Unknown</string>
    <string name="button_registration">Done</string>
    <!--end endpoint-->
    <!--register-->
    <string name="text_hint_first_name">first name</string>
    <string name="text_hint_last_name">last name</string>
    <string name="text_header_name">Name</string>
    <string name="text_title_create_schedule">tạo kế hoạch làm việc</string>
    <string name="text_title_create_examination">tạo dịch vụ phòng khám</string>
    <!--end endpoint-->
    <!--login-->
    <!--end endpoint-->
    <!--setting account start-->
    <string name="text_hint_full_name_ex">bui duc lam</string>
    <string name="text_hint_phone_number_ex">0374445473</string>
    <string name="text_hint_birth_date_ex">04/08/1997</string>
    <string name="text_header_profile">profile</string>
    <string name="text_header_history">history</string>
    <string name="text_title_logout">Logout</string>
    <string name="text_confirm_logout">Do you want to log out?</string>
    <string name="button_cancel">Cancel</string>
    <string name="name_example">Bui Duc Lam</string>
    <string name="specialist_example">Khoa mat</string>
    <string name="address_example">344 duong 2/9 Da Nang</string>
    <!--end endpoint-->
    <!--book appointment-->
    <string name="text_title_detail_doctor">Appointment</string>
    <string name="text_off">off</string>
    <string name="text_setting_time_5_minute">5 minute</string>
    <string name="text_setting_time_10_minute">10 minute</string>
    <string name="text_setting_time_60_minute">60 minute</string>
    <string name="text_setting_time_30_minute">30 minute</string>
    <string name="text_setting_time_45_minute">45 minute</string>
    <string name="text_always">30 minute</string>
    <string name="text_setting_time_15_minute">15 minute</string>
    <string name="text_content_examination">Sieu am</string>
    <string name="text_example_symptom">Dau mat</string>
    <string name="text_there_is_currently_no_appointment">There are currently no appointments</string>
    <string name="text_there_is_currently_no_notification">There are currently no notification</string>
    <string name="text_there_is_currently_no_time_free">There are currently no free time</string>
    <string name="text_when_appointment_are_delivered_they_will_be_displayed_here">When the information of appointment is delivered, it will be displayed here</string>
    <string name="text_when_notification_are_delivered_they_will_be_displayed_here">When the information of notification is delivered, it will be displayed here</string>
    <string name="text_when_schedule_are_delivered_they_will_be_displayed_here">When the information of schedule is delivered, it will be displayed here</string>
    <!--end endpoint-->
    <!--appointment-->
    <string name="text_status_pending">PENDING</string>
    <string name="text_status_cancel">CANCELED</string>
    <string name="text_status_confirmed">CONFIRMED</string>
    <string name="text_status_completed">COMPLETED</string>
    <!--end endpoint-->
    <!--appointment-->
    <string name="text_comment_example">Phòng khám thân thiệt, bác sĩ tốt</string>
    <!--dialog-->
    <string name="text_title_dialog_complete">Xác nhận</string>
    <string name="text_title_dialog_cancel">Xác nhận</string>
    <string name="text_content_dialog_complete">Bạn chắc chắn cuộc hẹn khám đã hoàn thành</string>
    <string name="text_content_dialog_reject">Bạn chắc chắn muốn hủy lịch hẹn khám này</string>
    <string name="text_content_dialog_confirm">Bạn muốn xác nhận cuộc hẹn này</string>
    <string name="text_address_example">344 đường 2 tháng 9 hải châu đà nẵng</string>
    <string name="name_patient_example">Nguyễn Văn Nam</string>
    <string name="address_patient_example">448 trưng nữ vương, hải châu</string>
    <string name="text_book_appointment_success">Thành công</string>
    <string name="text_book_appointment_fail">Thất bại</string>
    <string name="text_choose_application">Select photos</string>
    <string name="text_title_examination">Examination</string>
    <string name="text_title_schedule">Schedule Time</string>
    <string name="text_action_title_create_new_examination">add new examination</string>
    <string name="text_title_remove_service">Bạn có chắc chắn muốn xóa dịch vụ này không?</string>
    <string name="button_next">next</string>
    <string name="text_examination">Add new examination</string>
    <string name="text_title_examination_examination">Khám mắt</string>
    <string name="from_date">From Date</string>
    <string name="text_example_from_date">2020–05-24</string>
    <string name="end_date">End Date</string>
    <string name="text_example_end_date">2020-07-07</string>
    <string name="start_time_working">Work start time in a day</string>
    <string name="end_time_working">Work end time in a day</string>
    <string name="time_start_example">08:00</string>
    <string name="time_end_example">17:00</string>
    <string name="time_duration_example">15</string>
    <string name="duration_appointment">Duration default appointment</string>
    <string name="send_message">send message</string>
    <string name="select_time">select time</string>
    <string name="sending">sending...</string>
    <string name="seen">seen</string>
    <string name="you">You</string>
    <string name="confirm_content_dialog">Bạn có chắc chắn muốn cập nhật lịch làm việc của mình?</string>
    <string name="confirm_tittle_dialog">Xác nhận</string>
    <string name="title_symptom">triệu chứng</string>
    <string name="symptom_example">đau đầu</string>


    <!--end dialog-->


</resources>
