<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/mTabHome"
        android:enabled="true"
        android:title="@string/title_tab_home"
        android:icon="@drawable/ic_tab_home_general"
        app:showAsAction="withText"/>
    <item android:id="@+id/mTabAppointment"
        android:enabled="true"
        android:icon="@drawable/ic_tab_appointment_general"
        android:title="@string/title_tab_appointment"
        app:showAsAction="withText"/>
    <item android:id="@+id/mTabChat"
        android:title="@string/title_tab_chat"
        android:icon="@drawable/ic_tab_chat_general"
        android:enabled="true"
        app:showAsAction="withText"/>
    <item android:id="@+id/mTabNotification"
        android:enabled="true"
        android:icon="@drawable/ic_tab_notification_general"
        android:title="@string/title_tab_notification"
        app:showAsAction="withText"/>
    <item android:id="@+id/mTabSetting"
        android:title="@string/title_tab_setting"
        android:icon="@drawable/ic_tab_setting_general"
        android:enabled="true"
        app:showAsAction="withText"/>

</menu>