<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewHeaderStyle"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/from_date"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/fromDate"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/text_example_from_date"
                android:inputType="number"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewHeaderStyle"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/end_date" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/endDate"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/text_example_end_date"
                android:inputType="number"
                android:maxLength="10"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewHeaderStyle"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/start_time_working" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/timeStart"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/time_start_example"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewHeaderStyle"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/end_time_working" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/timeEnd"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:hint="@string/time_end_example"
                android:inputType="number"
                android:maxLength="5"
                android:maxLines="1" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/TextViewHeaderStyle"
                android:layout_margin="@dimen/dp_16"
                android:text="@string/duration_appointment" />

            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/durationAppointment"
                style="@style/EditTextStyle"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_16"
                android:hint="@string/time_duration_example"
                android:inputType="number"
                android:maxLines="1" />
        </LinearLayout>
    </ScrollView>

    <com.lambui.healthcare_doctor.widget.viewInApp.BottomButton
        android:id="@+id/btnSubmit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_8"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_16"
        app:BottomButtonContent="@string/button_send"
        app:BottomButtonSelected="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</LinearLayout>