<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_8"
    android:orientation="vertical">

    <include
        android:id="@+id/cardProfileDoctor"
        layout="@layout/item_view_horizental_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleReview"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_review"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardProfileDoctor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDateSelectAppoint"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/date_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleReview" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTimeSelectAppoint"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/time_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDateSelectAppoint">

    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleNameDoctor"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_specialist_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTimeSelectAppoint" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvAddressDoctor"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/content_specialist_doctor_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleNameDoctor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleService"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_service_doctor"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAddressDoctor" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContentService"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="Tu van va dieu tri theo chi dinh bac si"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleService" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvFeeService"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_fee"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContentService" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContentFeeService"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/fee_75_example"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFeeService" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvTitleRemainder"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_16"
        android:text="@string/title_remainder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContentFeeService" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvContentRemainder"
        style="@style/TextViewDescriptionStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_5"
        android:text="@string/text_setting_time_remainder"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleRemainder" />

    <com.lambui.healthcare_doctor.widget.viewInApp.BottomButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:BottomButtonContent="@string/confirm_book_appointment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvContentRemainder"
        app:layout_constraintVertical_bias="0.9" />

</androidx.constraintlayout.widget.ConstraintLayout>