<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvHeaderExamination"
        style="@style/TextViewHeaderStyle"
        android:layout_width="wrap_content"
        android:layout_marginTop="@dimen/dp_17"
        android:layout_marginBottom="@dimen/dp_15"
        android:text="@string/text_examination"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.lambui.healthcare_doctor.widget.viewInApp.EditTextCustom
        android:id="@+id/edtInputExamination"
        style="@style/EditTextCustomStyle"
        android:layout_marginTop="@dimen/dp_8"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        app:hint="@string/text_title_examination_examination"
        app:inputType="text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeaderExamination" />

    <com.lambui.healthcare_doctor.widget.viewInApp.BottomButton
        android:id="@+id/btnDone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/dp_20"
        app:BottomButtonContent="@string/button_send"
        app:layout_constraintBottom_toBottomOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>